app/assets/stylesheets/main.less
body {
  margin-top: 20px;
}

#mainChat {
  width: 500px;
  height: 300px;
  margin: 10px;
  border: 1px solid gray;
  background: #fff3e9;
}

#chatControls {
  width: 500px;
  margin: 10px;
}
#chatText {
  width: 400px;
  margin-bottom: 0px;
}

#btnSend {

}

.messageContainer {
  font-size: 11px;
}
.sender {
  font-weight: bold;
}
.message {

}

